# demo-package

./: .gitignore  README.md  pyproject.toml  setup.cfg
experimental/: lab.py
src/demo_package_ucabhoe/: main.py
src/demo_project_ubcahoe.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
